docs: add docs for Update Opening route
